# prompt-distillation

./: .gitignore  LICENSE  README.md  paths.py  pyproject.toml  requirements.txt  run_eval.sh  run_pipeline.sh  setup.py
baselines/: finetune_nyt.py
config/: accelerate_ddp_2gpu.yaml  accelerate_ddp_3gpu.yaml  accelerate_ddp_5gpu.yaml  accelerate_single_gpu.yaml  ds2.json  ds3_teacher.json  pipeline.yaml  pipeline_single_process.yaml
context/: financial_system_prompt_llama.txt  financial_system_prompt_notool_llama.txt  financial_system_prompt_notool_qwen.txt  financial_system_prompt_qwen.txt  financial_tools_schema_20260401.json  unified_tool_schema.json
core/: __init__.py  file_naming.py  llm.py  model_configs.py  putils.py  tool_call_format.py  utils.py
curriculum/: __init__.py  csv_to_lesson.py  exercise_with_answers.py  generate_distractor.py  generate_teacher_answers.py  lesson.py  questions_to_exam.py  sample_tool_questions.py
data/: __init__.py  dataloader.py  dataset.py  exercise.py  loading.py  multiturn.py  naming.py  paths.py  samples.py  tool_call_format.py
datasets/: amazon.csv  amazon_filtered.csv  amazon_questions.csv  hotpotqa_questions.csv  new_wiki.csv  new_wiki_filtered.csv  new_wiki_questions.csv  nyt.csv  nyt_filtered.csv  nyt_questions.csv  reddit.csv  reddit_filtered.csv  reddit_questions.csv
evaluation/: eval.py  evaluate.py  grade_answers_llm.py  grade_answers_match.py  metrics.py  partition_training_data.py  question_metrics.py  rewrite_squadshift.py  sample_questions.py  sample_tool_questions.py  utils.py
models/: __init__.py  (+4 more)
(+58 files in other folders)
