[project]
name = "prompt-distillation"
version = "0.1.0"
description = "Codebase for Prompt Distillation"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "torch>=2.0.0",
    "vllm>=0.4.0",
    "transformers>=4.40.0",
    "datasets>=2.18.0",
    "accelerate>=0.28.0",
    "peft>=0.10.0",
    "deepspeed>=0.14.0",
    "openai>=1.12.0",
    "rank-bm25>=0.2.2",
    "tqdm>=4.66.0",
    "wandb>=0.16.0",
    "randomname>=0.2.1",
    "prettyprinter>=0.18.0",
    "jsonargparse>=4.27.0",
    "aiofiles>=23.2.0",
    "nltk>=3.8.0",
    "pyyaml>=6.0.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.0.0",
    "ruff>=0.4.0",
]
